[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Ceasar.png" type="Texture" id=1]
[ext_resource path="res://Assets/Copperplate Gothic Bold Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Cæsar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.937255, 0.866667, 0.584314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 38.0
height = 86.0

[sub_resource type="CircleShape2D" id=2]
radius = 386.328

[node name="Cæsar" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Spørgsmål_3_panel" type="Panel" parent="."]
margin_left = -288.0
margin_top = -504.0
margin_bottom = -458.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 4 )

[node name="Spørgsmål_3_tekst" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -168.0
margin_top = -480.0
margin_right = 1.0
margin_bottom = -439.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "Fik jeg nogle børn?"

[node name="Rigtig_Sprøgsmål_3" type="Button" parent="."]
margin_left = -248.0
margin_top = -176.0
margin_bottom = -136.0
rect_scale = Vector2( 2, 2 )
text = "Ja, Julia. Og Augustus jeg adopterede"

[node name="Forkert_Spørgsmål_3" type="Button" parent="."]
margin_left = -232.0
margin_top = -280.0
margin_bottom = -240.0
rect_scale = Vector2( 2, 2 )
text = "Nej, jeg adopterede kun Augustus"

[node name="Forkert2_Spørgsmål_3" type="Button" parent="."]
margin_left = -184.0
margin_top = -384.0
margin_bottom = -344.0
rect_scale = Vector2( 2, 2 )
text = "Nej, jeg fik ikke nogle børn"

[node name="Ceasar" type="Sprite" parent="."]
scale = Vector2( 4.7, 4.7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 5 )
shape = SubResource( 1 )

[node name="Spørgsmål_2_panel" type="Panel" parent="."]
visible = false
margin_left = -288.0
margin_top = -504.0
margin_bottom = -458.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 4 )

[node name="Spørgsmål_2_tekst" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -168.0
margin_top = -480.0
margin_right = 1.0
margin_bottom = -439.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "Hvordan døde jeg?
"

[node name="Rigtig_Sprøgsmål_2" type="Button" parent="."]
visible = false
margin_left = -120.0
margin_top = -384.0
margin_bottom = -344.0
rect_scale = Vector2( 2, 2 )
text = "Jeg blev myrdet"

[node name="Forkert_Spørgsmål_2" type="Button" parent="."]
visible = false
margin_left = -304.0
margin_top = -280.0
margin_bottom = -240.0
rect_scale = Vector2( 2, 2 )
text = "Jeg døde af sygdom der spredte sig i perioden"

[node name="Forkert2_Spørgsmål_2" type="Button" parent="."]
visible = false
margin_left = -144.0
margin_top = -176.0
margin_bottom = -136.0
rect_scale = Vector2( 2, 2 )
text = "Jeg blev dræbt i krig"

[node name="Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
shape = SubResource( 2 )

[node name="Spørgsmål_1_panel" type="Panel" parent="."]
visible = false
margin_left = -288.0
margin_top = -504.0
margin_bottom = -458.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 4 )

[node name="Spørgsmål_1_tekst" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -256.0
margin_top = -480.0
margin_right = 2.0
margin_bottom = -439.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "Hvordan kom jeg til magten?
"

[node name="Rigtig_Sprøgsmål_1" type="Button" parent="."]
visible = false
margin_left = -208.0
margin_top = -280.0
margin_bottom = -240.0
rect_scale = Vector2( 2, 2 )
text = "Jeg tog magten fra triumviratet"

[node name="Forkert_Spørgsmål_1" type="Button" parent="."]
visible = false
margin_left = -232.0
margin_top = -384.0
margin_bottom = -344.0
rect_scale = Vector2( 2, 2 )
text = "Jeg blev stemt ind af befolkningen"

[node name="Forkert2_Spørgsmål_1" type="Button" parent="."]
visible = false
margin_left = -208.0
margin_top = -176.0
margin_bottom = -136.0
rect_scale = Vector2( 2, 2 )
text = "Jeg arvede tronen efter min far"

[connection signal="pressed" from="Rigtig_Sprøgsmål_3" to="." method="_on_Rigtig_Sprgsml_3_pressed"]
[connection signal="pressed" from="Forkert_Spørgsmål_3" to="." method="_on_Forkert_Sprgsml_3_pressed"]
[connection signal="pressed" from="Forkert2_Spørgsmål_3" to="." method="_on_Forkert2_Sprgsml_3_pressed"]
[connection signal="pressed" from="Rigtig_Sprøgsmål_2" to="." method="_on_Rigtig_Sprgsml_2_pressed"]
[connection signal="pressed" from="Forkert_Spørgsmål_2" to="." method="_on_Forkert_Sprgsml_2_pressed"]
[connection signal="pressed" from="Forkert2_Spørgsmål_2" to="." method="_on_Forkert2_Sprgsml_2_pressed"]
[connection signal="body_entered" from="Zone" to="." method="_on_Zone_body_entered"]
[connection signal="body_exited" from="Zone" to="." method="_on_Zone_body_exited"]
[connection signal="pressed" from="Rigtig_Sprøgsmål_1" to="." method="_on_Rigtig_Sprgsml_1_pressed"]
[connection signal="pressed" from="Forkert_Spørgsmål_1" to="." method="_on_Forkert_Sprgsml_1_pressed"]
[connection signal="pressed" from="Forkert2_Spørgsmål_1" to="." method="_on_Forkert2_Sprgsml_1_pressed"]
